<resources>
    <string name="app_name">Covid tracker</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Email">E-mail</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="unknownError">Unknown error</string>
    <string name="generate">Generate available times</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="NoAccount">Don\'t have an account?</string>
    <string name="RegHere">Register here!</string>
    <string name="IncorrectEmailPassw">Incorrect email or password</string>
    <string name="Firstname">First name</string>
    <string name="Lastname">Last name</string>
    <string name="Password">Password</string>
    <string name="RepeatPassword">Repeat password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="DOB">Date of birth (YYYYMMDD)</string>
    <string name="StreetAddress">Street Address</string>
    <string name="City">City</string>
    <string name="County">County</string>
    <string name="ZipCode">Zip Code</string>
    <string name="english">English</string>
    <string name="swedish">Swedish</string>
    <string name="languages">Languages</string>
    <string name="switchLang">(SV)</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Covid Tracking</string>
    <string name="messages">Messages</string>
    <string name="handleAppoint">Book/Cancel Appointment</string>
    <string name="passport">Digital Vaccin Passport</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="userInfo">Profile</string>
    <string name="settings">Settings</string>
    <string name="quest">Questionnaires</string>
    <string name="sched">Scheduling</string>
    <string name="addCenterMenu">+ Add Center</string>
    <string name="addVaccineMenu">+ Add Vaccine</string>
    <string name="notFilled">User has not filled out questionnaire</string>
    <string name="back">Back</string>
    <string name="approve">Approve</string>
    <string name="searchEmail">Search user by email:</string>
    <string name="search">Search User</string>
    <string name="userNotApproved">Users with not approved questionnaires</string>
    <string name="questInfo">Questionnaire Information</string>
    <string name="noUsers">All users have approved questionnaires</string>
    <string name="userInfoQuest">User Information</string>
    <string name="chooseCenter">Center</string>
    <string name="chooseAge">Age group</string>
    <string name="age">Age</string>
    <string name="chooseDays">Available days</string>
    <string name="days">Days</string>
    <string name="chooseAppointmentLength">Time per booking</string>
    <string name="date">Date</string>
    <string name="startdate">Startdate</string>
    <string name="enddate">Enddate</string>
    <string name="publishTimes">Publish Times</string>
    <string name="noCenter">No center chosen</string>
    <string name="noAges">No ages chosen</string>
    <string name="noDays">No days chosen</string>
    <string name="appShort">Appointment time to short</string>
    <string name="notInt">Minutes input incorrect</string>
    <string name="startEndDate">Not valid start and/or end date </string>
    <string name="endDateAfter">End date must be after start date</string>
    <string name="startFuture">"Start date must be in the future"</string>
    <string name="rangeAdd">Range added</string>
    <string name="conflictRange">Range not added: a conflicting range may exist, try other one</string>
    <string name="validTitle">Appointment Follow-Up</string>
    <string name="checkAll">Check all</string>
    <string name="uncheckAll">Uncheck all</string>
    <string name="allCenters">All centers</string>
    <string name="appValid">Appointments validated</string>
    <string name="appInvalid">Appointments invalidated</string>
    <string name="getAppFail">Get appointments failed</string>
    <string name="setValidFail">Set validation failed</string>
    <string name="appointmentSemi">Appointment:</string>
    <string name="centerSemi" translatable="false">Center:</string>
    <string name="nameSemi">Name:</string>
    <string name="birthSemi">Birthdate:</string>
    <string name="nothingToShow">Nothing to show</string>
    <string name="validate">Validate Appointments</string>
    <string name="invalidate">Invalidate Appointments</string>
    <string name="addCenters">Add New Centers</string>
    <string name="centerName">Center Name:</string>
    <string name="centerCounty">County: </string>
    <string name="amountVac">Amount of vaccine doses: </string>
    <string name="addCenter">Add Center</string>
    <string name="addVaccines">Add New Vaccine</string>
    <string name="vaccineName">Vaccine Name:</string>
    <string name="addVaccine">Add Vaccine</string>
    <string name="addVaccineCenter">Add Vaccine to Center</string>
    <string-array name="location">
        <item>All Locations</item>
        <item>Sweden</item>
        <item>Stockholm</item>
        <item>Uppsala</item>
    </string-array>
    <string-array name="ageGroup">
        <item>All Age Groups</item>
        <item>Child</item>
        <item>Adult</item>
        <item>Elder</item>
    </string-array>
    <string-array name="product">
        <item>All Products</item>
        <item>Pfizer</item>
    </string-array>
    <string-array name="dose">
        <item>Any doses</item>
        <item>Dose 1</item>
        <item>Dose 2</item>
    </string-array>
    <string name="totalCases">Total cases: </string>
    <string name="totalAmount">Total amount: </string>
    <string name="totalDeaths">Total deaths: </string>
    <string name="totalIntensive">Total intensive: </string>
    <string name="totalDistri">Total distributed doses: </string>
    <string name="totalAdmini">Total administered doses: </string>
    <string name="vs">Dose 1 vs Dose 2: </string>
    <string-array name="questions">
        <item>1. Have you ever had a strong reaction after a vaccination, and needed hospital assistance?</item>
        <item>2. Have you been vaccinated in the past 14 days?</item>
        <item>3. Do you have allergies that ever gave you strong reactions that you needed hospital assistance for?</item>
        <item>4. Do you have an increased tendency to bleed because of an illness or medication?</item>
        <item>5. Are you pregnant?</item>
    </string-array>
    <string name="questionnairTitle">Please fill out the questionnaire</string>
    <string name="center">Center</string>
    <string name="vaccine">Vaccine</string>
    <string name="time">Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="chooseDate">Choose a date</string>
    <string name="chooseDay">Choose a day</string>
    <string name="connectionFailureAlert">Connection failed, please try again later!</string>
    <string name="placeHolder">Place Holder</string>
    <string name="contactAdmin">You cannot book a second dose. Contact an admin</string>
    <string name="yourAppointmentInfo">Your Appointment Info</string>
    <string name="cancelAppointment">Cancel appointment</string>
    <string name="rebookAppointment">Rebook appointment</string>
    <string name="bookAppointment">Book appointment</string>
    <string name="emptyQuestionnaire">You have not filled out a questionnaire</string>
    <string name="emptyAppointment">You do not have any appointment at this moment</string>
    <string name="firstDoseDate">First dose date</string>
    <string name="secondDoseDate">Second dose date</string>
    <string-array name="Age">
        <item>All ages</item>
        <item>18 +</item>
        <item>30 +</item>
        <item>40 +</item>
        <item>50 +</item>
        <item>60 +</item>
    </string-array>
    <string-array name="weekdaysShort">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>
    <string-array name="counties">
        <item>Blekinge</item>
        <item>Dalarna</item>
        <item>Gotland</item>
        <item>Gävleborg</item>
        <item>Halland</item>
        <item>Jämtland</item>
        <item>Jönköping</item>
        <item>Kalmar</item>
        <item>Kronoberg</item>
        <item>Norrbotten</item>
        <item>Skåne</item>
        <item>Stockholm</item>
        <item>Södermanland</item>
        <item>Uppsala</item>
        <item>Värmland</item>
        <item>Västerbotten</item>
        <item>Västernorrland</item>
        <item>Västmanland</item>
        <item>Västra Götaland</item>
        <item>Örebro</item>
        <item>Östergötland</item>
    </string-array>
    <string name="FAQ_app">FAQExpandableListView</string>
    <string-array name="group1">
        <item>
            <b>How many people can meet indoors and outdoors at different activities?</b>
            \n\n<a href="https://www.folkhalsomyndigheten.se/smittskydd-beredskap/utbrott/aktuella-utbrott/covid-19/verksamheter/information-till-arrangorer-av-evenemang/max-antal-deltagare-i-sammankomster-och-i-olika-lokaler/">On this page there is a table that shows the maximum number of participants at different kinds of gatherings and in different rooms</a>
        </item>
        <item>
            <b>What do the Public Health Agency\'s regulations and general advice on everyone\'s responsibilities mean?</b>
            \n\nThe Swedish Public Health Agency\'s regulations and general advice are aimed at both individuals and businesses.
            \nThe regulations are legally binding, ie. they describe what the business and you as an individual are obliged to do. In this case, it\'s about taking precautions to protect yourself and others from covid-19. You should think for yourself how you can avoid becoming infected and how you can avoid infecting others. It is especially important to show consideration for people in risk groups.
            \nThe general advice is not legally binding, but a kind of recommendation for how you can do to comply with what is in the regulation or in another binding rule. This means that you do not have to do exactly as the General Council says, but if you choose to do it in a different way, you must still comply with what is stated in the binding rule.
        </item>
    </string-array>
    <string name="Firstname_userinfo">Firstname </string>
    <string name="Lastname_userinfo">Lastname </string>
    <string name="Bdate_userinfo">Birthdate </string>
</resources>