<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_quest"
            android:icon="@drawable/ic_questionnaire"
            android:title="@string/quest" />

        <item
            android:id="@+id/nav_sched"
            android:icon="@drawable/ic_clock"
            android:title="@string/sched" />
        <item
            android:id="@+id/nav_addCenter"
            android:icon="@drawable/ic_center"
            android:title="@string/addCenterMenu" />
        <item
            android:id="@+id/nav_addVaccin"
            android:icon="@drawable/ic_vaccine"
            android:title="@string/addVaccineMenu" />
        <item
            android:id="@+id/nav_covidpassport"
            android:icon="@drawable/ic_covid_passport"
            android:title="@string/passport" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

    </group>


</menu>