<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/settings"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/languages" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:text="@string/english"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:elevation="0dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:insetTop="2dp"
            android:insetBottom="2dp"
            android:text="@string/swedish"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:elevation="0dp" />
        <Button
            android:id="@+id/testbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="testbutton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>