<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/questionnairTitle"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuestionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/cancelQuestionnaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/confirmQuestionnaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>



</LinearLayout>