<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="50dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/beige"
            >

            <AutoCompleteTextView

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/center"
                android:textColor="@color/black"
                android:layout_margin="30dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/beige"
            >

            <AutoCompleteTextView

                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/time"
                android:textColor="@color/black"
                android:layout_margin="30dp"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginHorizontal="25dp"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:layout_marginHorizontal="25dp" />

    </LinearLayout>


</LinearLayout>